apps/jenkins/base/service-jnlp.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp
  labels:
    app.kubernetes.io/name: jenkins
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - name: agent
      port: 50000
      targetPort: 50000
