apps/jenkins/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
  annotations:
    service.openshift.io/infrastructure: "true"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - name: web
      port: 80
      targetPort: 8080
